Add LSTM && Plugins and improvements Generator Level and games