@@ -2,8 +2,6 @@ package com.Generator;
 
 import java.util.List;
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.stream.Collectors;
 
 public class LevelChromosome {
     private final List<Pattern> patterns;
@@ -13,10 +11,8 @@ public class LevelChromosome {
         this.patterns = new ArrayList<>(patterns);
     }
     public List<GeneType> getGenes() {
-        List<GeneType> allGenes = patterns.stream()
-                .flatMap(pattern -> pattern.getGenes().stream())
-                .collect(Collectors.toList());
-        return Collections.unmodifiableList(allGenes);
+        return patterns.stream()
+                .flatMap(pattern -> pattern.getGenes().stream()).toList();
     }
     public List<Pattern> getPatterns() {
         return this.patterns;
@@ -27,5 +23,16 @@ public class LevelChromosome {
 
     public void setFitness(double fitness) {
         this.fitness = fitness;
+    }
+    public int getGeneIndexForPattern(int patternIndex) {
+        if (patternIndex < 0 || patternIndex >= patterns.size()) {
+            throw new IndexOutOfBoundsException("Pattern index out of bounds");
+        }
+
+        int geneIndex = 0;
+        for (int i = 0; i < patternIndex; i++) {
+            geneIndex += patterns.get(i).getLength();
+        }
+        return geneIndex;
     }
 }
